<resources>
    <string name="app_name">Weather App</string>
    <string name="splash">Weather ForeCast</string>
    <string name="delhi">Delhi</string>
    <string name="temp">00:00℃</string>
    <string name="day">Today</string>
    <string name="sunny">Sunny</string>
    <string name="min_00_00">Min: 00.00 ℃</string>
    <string name="max_00_00">Max: 00.00 ℃</string>
    <string name="days">Tuesday</string>
    <string name="date">21 january 2023</string>
    <string name="sea">Sea</string>
    <string name="_100">100</string>
    <string name="sunset">Sunset</string>
    <string name="_10243">10243</string>
    <string name="sunrise">Sunrise</string>
    <string name="_43242">43242</string>
    <string name="conditions">Conditions</string>
    <string name="rain">Rain</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="_3_33">3.33</string>
    <string name="humidity">Humidity</string>
    <string name="_70">70</string>
</resources>